--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: archeofrag.gui
 Type: Package
 Title: Spatial Analysis in Archaeology from Refitting Fragments (GUI)
-Version: 0.1.2
-Date: 2025-01-18
+Version: 0.1.3
+Date: 2025-02-07
 Authors@R: person("Sebastien", "Plutniak", email = "sebastien.plutniak@posteo.net", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6674-3806"))
 Author: Sebastien Plutniak [aut, cre] (<https://orcid.org/0000-0002-6674-3806>)
 Maintainer: Sebastien Plutniak <sebastien.plutniak@posteo.net>
@@ -11,15 +11,16 @@ License: GPL-3
 Repository: CRAN
 Encoding: UTF-8
 Imports:
-	archeofrag,
-	dendextend,
-	doParallel,
+    archeofrag,
+    dendextend,
+    doParallel,
+    doRNG,
     DT,
-	foreach,
+    foreach,
     ggplot2,
-	grDevices,
+    grDevices,
     igraph,
-	shiny,
+    shiny,
     shinythemes,
 Suggests:
 	RBGL,
