--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -36,9 +36,9 @@ jobs:
       - name: Install Dependencies (Windows)
         run: choco install glpk pandoc rtools
         if: matrix.config.os == 'windows-latest'  
-      - name: Install Dependencies (Linux)
+      - name: Install Dependencies (ubuntu-24.04)
         run: sudo apt-get install  libglpk-dev libglpk40 libc6 pandoc libcurl4-openssl-dev
-        if: matrix.config.os == 'ubuntu-20.04'  
+        if: matrix.config.os == 'ubuntu-24.04'  
       - name: Install Dependencies (macOS)
         run: brew install pandoc
         if: matrix.config.os == 'macOS-latest'          
@@ -55,9 +55,9 @@ jobs:
         run: remotes::install_github("igraph/rigraph")
         if: matrix.config.os == 'macOS-latest'  
         shell: Rscript {0}   
-      - name: Install igraph (Linux)
+      - name: Install igraph (ubuntu-24.04)
         run: remotes::install_github("igraph/rigraph")
-        if: matrix.config.os == 'ubuntu-20.04'  
+        if: matrix.config.os == 'ubuntu-24.04'  
         shell: Rscript {0}          
       - name: Install igraph (Windows)
         run:  install.packages("igraph", type="win.binary", verbose=TRUE)
