--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Install Dependencies (ubuntu-24.04)
         run: sudo apt-get install  libglpk-dev libglpk40 libc6 pandoc libcurl4-openssl-dev
         if: matrix.config.os == 'ubuntu-24.04'  
+      - name: Install Dependencies (ubuntu-latest)
+        run: sudo apt-get install  libglpk-dev libglpk40 libc6 pandoc libcurl4-openssl-dev
+        if: matrix.config.os == 'ubuntu-latest'  
       - name: Install Dependencies (macOS)
         run: brew install pandoc
         if: matrix.config.os == 'macOS-latest'          
