--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,10 @@ import(doParallel)
 importFrom(archeofrag, make_frag_object, make_cr_graph, frag.get.parameters, frag.get.layers.pair, frag.edges.weighting, frag.layers.cohesion, frag.layers.admixture, frag.simul.process, frag.simul.summarise, frag.graph.plot)
 importFrom(dendextend, is.dendrogram)
 importFrom(doRNG, registerDoRNG)
-importFrom(DT, renderDT, DTOutput)
+importFrom(DT, renderDT, DTOutput, JS)
 importFrom(ggplot2, aes, theme_light, geom_density, scale_fill_grey, scale_fill_manual, geom_vline, xlab, ggtitle, geom_boxplot, facet_wrap, scale_x_continuous, theme, element_text)
 importFrom(grDevices, dev.off, svg)
-importFrom(igraph, gorder, V, E, count_components, gsize,  "%--%", vertex_attr, delete_vertices) 
+importFrom(igraph, gorder, V, E, components, count_components, gsize, "%--%", vertex_attr, delete_vertices, graph_from_data_frame) 
 importFrom(shinythemes, shinytheme)
 importFrom(stats, as.dendrogram, as.dist, complete.cases, hclust, reshape, median, mad)
 importFrom(utils, combn, packageVersion, read.csv, data, sessionInfo, toLatex)
