--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ import(shiny)
 import(foreach)
 import(doParallel)
 importFrom(archeofrag, make_frag_object, make_cr_graph, frag.get.parameters, frag.get.layers.pair, frag.edges.weighting, frag.layers.cohesion, frag.layers.admixture, frag.simul.process, frag.simul.summarise, frag.graph.plot)
-importFrom(dendextend, is.dendrogram)
+importFrom(dendextend, is.dendrogram, entanglement, tanglegram)
 importFrom(doRNG, registerDoRNG)
 importFrom(DT, renderDT, DTOutput, JS)
 importFrom(ggplot2, aes, theme_light, geom_density, scale_fill_grey, scale_fill_manual, geom_vline, xlab, ggtitle, geom_boxplot, facet_wrap, scale_x_continuous, theme, element_text)
