--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,6 @@ importFrom(ggplot2, aes, theme_light, geom_density, scale_fill_grey, scale_fill_
 importFrom(grDevices, dev.off, svg)
 importFrom(igraph, gorder, V, E, components, count_components, gsize, "%--%", vertex_attr, delete_vertices, graph_from_data_frame) 
 importFrom(shinythemes, shinytheme)
-importFrom(stats, as.dendrogram, as.dist, complete.cases, hclust, reshape, median, mad)
+importFrom(stats, as.dendrogram, as.dist, as.hclust, cophenetic, cor, complete.cases, hclust, reshape, median, mad)
 importFrom(utils, combn, packageVersion, read.csv, data, sessionInfo, toLatex)
 
